--- a/.env
+++ b/.env
@@ -1,6 +1,18 @@
-# Bright Data credentials
-BRIGHT_DATA_USERNAME=brd-customer-hl_798bdd8a-zone-opinionflow_serp_zone
-BRIGHT_DATA_PASSWORD=um2ymcls536c
+# Bright Data Serp Credentials
+BRIGHT_DATA_SERP_USERNAME=brd-customer-hl_798bdd8a-zone-opinionflow_serp_zone
+BRIGHT_DATA_SERP_PASSWORD=um2ymcls536c
+BRIGHT_DATA_SERP_ZONE=opinionflow_serp_zone
+
+# Bright Data Web Unlocker Credentials
+BRIGHT_DATA_WEBUNLOCKER_USERNAME=brd-customer-hl_798bdd8a-zone-opinionflow_webunlocker
+BRIGHT_DATA_WEBUNLOCKER_PASSWORD=f8wtxmyrypz6
+BRIGHT_DATA_WEBUNLOCKER_ZONE=opinionflow_webunlocker
+
+# Bright Data Browser API
+BRIGHT_DATA_BROWSER_API_USERNAME = brd-customer-hl_798bdd8a-zone-opinionflow_browser_api_zone
+BRIGHT_DATA_BROWSER_API_PASSWORD = 0ulmx4o9u3sx
+
+
 BRIGHT_DATA_API_KEY=b700465d-5707-4ea8-a415-8c9ab90fd7e9
 
 # Database
