--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.24.0
 httpx==0.25.2
 beautifulsoup4==4.12.2
 pydantic==2.11.5
+pydantic-settings==2.0.3
 python-multipart==0.0.6
 pinecone-client==2.2.4
 google-generativeai==0.3.2
