--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,117 +1,9 @@
-aiofiles==24.1.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-bs4==0.0.2
-cachetools==5.5.2
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.1.8
-fastapi==0.115.12
-ffmpy==0.5.0
-filelock==3.18.0
-Flask==3.1.1
-flask-cors==6.0.0
-fsspec==2025.5.1
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.0rc1
-google-api-python-client==2.169.0
-google-auth==2.40.2
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
-googleapis-common-protos==1.70.0
-gradio==5.31.0
-gradio_client==1.10.1
-greenlet==3.2.2
-groovy==0.1.2
-grpcio==1.71.0
-grpcio-status==1.71.0
-h11==0.16.0
-hf-xet==1.1.2
-httpcore==1.0.9
-httplib2==0.22.0
-httpx==0.28.1
-huggingface-hub==0.32.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.1
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mpmath==1.3.0
-narwhals==1.40.0
-networkx==3.4.2
-numpy==2.2.6
-orjson==3.10.18
-packaging==24.2
-pandas==2.2.3
-pillow==11.2.1
-pinecone==7.0.1
-pinecone-plugin-interface==0.0.7
-playwright==1.52.0
-proto-plus==1.26.1
-protobuf==5.29.4
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.11.4
-pydantic-settings==2.9.1
-pydantic_core==2.33.2
-pydeck==0.9.1
-pydub==0.25.1
-pyee==13.0.0
-Pygments==2.19.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-rich==14.0.0
-rpds-py==0.25.1
-rsa==4.9.1
-ruff==0.11.11
-safehttpx==0.1.6
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.3
-semantic-version==2.10.0
-sentence-transformers==4.1.0
-setuptools==80.8.0
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-starlette==0.46.2
-streamlit==1.45.1
-sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-toml==0.10.2
-tomlkit==0.13.2
-torch==2.7.0
-tornado==6.5
-tqdm==4.67.1
-transformers==4.52.3
-typer==0.15.4
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-tzdata==2025.2
-uritemplate==4.1.1
-urllib3==2.4.0
-uvicorn==0.34.2
-websockets==15.0.1
-Werkzeug==3.1.3
+fastapi
+uvicorn[standard]
+pydantic
+pydantic-settings
+httpx
+beautifulsoup4
+pinecone
+google-generativeai
+python-dotenv
