--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,66 @@
+# Environment variables
 .env
-*.pyc
-__pycache__/
-.env
-.DS_Store
 backend/.env
+react-frontend/.env
+react-frontend/.env.local
+react-frontend/.env.development.local
+react-frontend/.env.production.local
+
+# Python (backend) - all __pycache__ folders at any level
+backend/**/__pycache__/
+backend/**/*.pyc
+backend/**/*.pyo
+backend/**/*.pyd
+backend/.venv/
+backend/venv/
+backend/.pytest_cache/
+backend/.coverage
+
+# React/Next.js (react-frontend)
+react-frontend/node_modules/
+react-frontend/.pnp
+react-frontend/.pnp.*
+react-frontend/.yarn/*
+!react-frontend/.yarn/patches
+!react-frontend/.yarn/plugins
+!react-frontend/.yarn/releases
+!react-frontend/.yarn/versions
+
+# Next.js
+react-frontend/.next/
+react-frontend/out/
+react-frontend/build/
+
+# Testing
+react-frontend/coverage/
+
+# TypeScript
+react-frontend/*.tsbuildinfo
+react-frontend/next-env.d.ts
+
+# Vercel
+react-frontend/.vercel
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# OS files
+.DS_Store
+*.pem
+Thumbs.db
+
+# Editor
+.vscode/
+.idea/
+*.swp
+
+# Database
+*.db
+*.sqlite
+
+# Cache
+.cache/
