--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -2,11 +2,16 @@ steps:
   # Build the container image
   - name: "gcr.io/cloud-builders/docker"
     args:
-      ["build", "-t", "gcr.io/$PROJECT_ID/opinionflow-backend:$COMMIT_SHA", "."]
+      [
+        "build",
+        "-t",
+        "gcr.io/$PROJECT_ID/opinionflow-backend-v2:$COMMIT_SHA",
+        ".",
+      ]
 
   # Push the container image to Container Registry
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/opinionflow-backend:$COMMIT_SHA"]
+    args: ["push", "gcr.io/$PROJECT_ID/opinionflow-backend-v2:$COMMIT_SHA"]
 
   # Deploy container image to Cloud Run
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
@@ -14,9 +19,9 @@ steps:
     args:
       - "run"
       - "deploy"
-      - "opinionflow-backend"
+      - "opinionflow-backend-v2"
       - "--image"
-      - "gcr.io/$PROJECT_ID/opinionflow-backend:$COMMIT_SHA"
+      - "gcr.io/$PROJECT_ID/opinionflow-backend-v2:$COMMIT_SHA"
       - "--region"
       - "us-central1"
       - "--platform"
@@ -32,4 +37,4 @@ steps:
       - "300"
 
 images:
-  - "gcr.io/$PROJECT_ID/opinionflow-backend:$COMMIT_SHA"
+  - "gcr.io/$PROJECT_ID/opinionflow-backend-v2:$COMMIT_SHA"
